--- a/50_Luis Rivera_Repositorio.html
+++ b/50_Luis Rivera_Repositorio.html
@@ -15,7 +15,7 @@
         </tr>
         <tr>
             <td align="center" rowspan="4" width="64">
-                <img src="C:\Users\Carlina1978\Documents\Trabajos Luis\Diseño Wed\fd307ebe-9460-4c15-a11e-25075e2d373b.jpg" widh="60" height="180"></img>
+                <img src="https://github.com/175-Luis-Rivera/Tarea-Ficha/blob/master/WhatsApp%20Image%202021-04-11%20at%207.43.26%20PM.jpeg?raw=true" widh="60" height="180"></img>
             </td>
             
             <td align="center" colspan="4"> 
